[package]
name = "tlsi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
boring = "4.16.0"
clap = { version = "4.5.35", features = ["derive"] }
histogram = "0.11.3"
regex = "1.11.1"
ring = "0.17.14"
tokio = { version = "1.44.2", features = ["full"] }
tokio-boring = "4.16.0"
quiche = "0.24"
url = "2.5.4"
